<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundWhite"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sfpro"
            android:padding="15dp"
            android:text="@string/tilni_tanlang"
            android:textColor="@color/grey"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <RadioButton
                android:id="@+id/radio_uz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sfpro"
                android:padding="5dp"
                android:text="@string/lotin"
                android:textColor="@color/grey"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/radio_ru"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/sfpro"
                android:padding="5dp"
                android:text="@string/kril"
                android:textColor="@color/grey"
                android:textSize="20sp" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end|center_vertical"
            android:orientation="horizontal"
          >

            <TextView
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="center"
                android:fontFamily="@font/sfpro"
                android:text="@string/bekor_qilish"
                android:textColor="@color/myColor"
                android:textSize="16sp"
                android:layout_marginRight="30dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/btn_ok"
                android:layout_width="50dp"
                android:gravity="center"
                android:layout_height="50dp"
                android:layout_marginRight="15dp"
                android:fontFamily="@font/sfpro"
                android:text="@string/ok"
                android:textColor="@color/myColor"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>