<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_back"
    tools:context=".ui.setting.SettingFragment">

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="5dp"
        android:src="@drawable/ic_arrow_right"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/grey" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:fillViewport="true"
        android:overScrollMode="never"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_back">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/card1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.05"
                app:layout_constraintWidth_percent="0.9">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/backgroundWhite"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="15dp">

                    <ImageView
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:src="@drawable/ic_theme" />

                    <TextView
                        android:id="@+id/tv_darkTheme"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/sfpro"
                        android:padding="5dp"
                        android:text="@string/day"
                        android:textColor="@color/grey"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <com.rm.rmswitch.RMSwitch
                        android:id="@+id/themeSwitch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:checked="false"
                        app:enabled="true"
                        app:forceAspectRatio="false"
                        app:switchBkgCheckedColor="#64DD17"
                        app:switchBkgNotCheckedColor="#F9F9F9"
                        app:switchDesign="large"
                        app:switchToggleCheckedColor="#Fff"
                        app:switchToggleNotCheckedColor="#64DD17" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="@+id/card1"
                app:layout_constraintStart_toStartOf="@+id/card1"
                app:layout_constraintTop_toBottomOf="@+id/card1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/backgroundWhite"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="15dp">

                    <ImageView
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:src="@drawable/ic_language" />

                    <TextView
                        android:id="@+id/tv_language"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/sfpro"
                        android:padding="5dp"
                        android:text="@string/dastur_tili"
                        android:textColor="@color/grey"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:entries="@array/language"
                        android:gravity="center_vertical"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:fontFamily="@font/sfpro"
                        android:text="Lotin"
                        android:textColor="@color/grey" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="@+id/card2"
                app:layout_constraintStart_toStartOf="@+id/card2"
                app:layout_constraintTop_toBottomOf="@+id/card2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/backgroundWhite"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="15dp">

                    <ImageView
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:src="@drawable/ic_share_settings" />

                    <TextView
                        android:id="@+id/tv_share"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/sfpro"
                        android:padding="5dp"
                        android:text="@string/ulashish"
                        android:textColor="@color/grey"
                        android:textSize="16sp"
                        android:textStyle="bold" />


                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="@+id/card3"
                app:layout_constraintStart_toStartOf="@+id/card3"
                app:layout_constraintTop_toBottomOf="@+id/card3">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/backgroundWhite"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="15dp">

                    <ImageView
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:src="@drawable/ic_about" />

                    <TextView
                        android:id="@+id/tv_about"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/sfpro"
                        android:padding="5dp"
                        android:text="@string/dastur_haqida"
                        android:textColor="@color/grey"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <TextView
        android:id="@+id/tv_setting"
        style="@style/TextTitleStyle"
        android:text="@string/sozlamalar"
        app:layout_constraintBottom_toBottomOf="@+id/btn_back"
        app:layout_constraintStart_toEndOf="@+id/btn_back"
        app:layout_constraintTop_toTopOf="@+id/btn_back" />


    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:adSize="SMART_BANNER"
        app:adUnitId="ca-app-pub-9972961616661898/9885284299"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>